--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <title>Snowpack App</title>
   </head>
   <body>
-    <img id="img" src="/logo.svg" />
-    <canvas id="canvas"></canvas>
+    <h1>Client Renderer</h1>
+    <iframe id="theiframe"></iframe>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
     <!--
