can nicely move the mouse over network

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
   <body>
     <h1>Client Renderer</h1>
     <iframe id="theiframe"></iframe>
+    <div id="pointer-local">&nbsp;</div>
+    <div id="pointer-remote">&nbsp;</div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <script type="module" src="/dist/index.js"></script>
     <!--
