some styling, correct pointer position

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
     <title>Snowpack App</title>
   </head>
   <body>
-    <h1>Client Renderer</h1>
+    <div id="editorchrome">
+      <h4>Editor Interface</h4>
+    </div>
     <iframe id="theiframe"></iframe>
     <div id="pointer-local">&nbsp;</div>
     <div id="pointer-remote">&nbsp;</div>
