--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <div id="editorchrome">
-      <h4>Editor Interface</h4>
+      <input type="text" id="gotourl" value="insert a valid url" class="invalid" /><button type="button" id="gotourlbutton" class="invalid">GO!</button>
     </div>
     <iframe id="theiframe"></iframe>
     <div id="pointer-local">&nbsp;</div>
     <div id="pointer-remote">&nbsp;</div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="module" src="./dist/index.js"></script>
+    <script type="module" src="./dist/editorUI.js"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
