Tooling update: Snowpack, tsconfig, eslint

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="editorchrome">
-      <input type="text" id="gotourl" value="insert a valid url" class="invalid" /><button type="button" id="gotourlbutton" class="invalid">GO!</button>
+      <input tabindex=1 type="text" id="gotourl" placeholder="enter a valid url" class="invalid" /><button type="button" id="gotourlbutton" class="invalid">GO!</button>
     </div>
     <iframe id="theiframe"></iframe>
     <div id="pointer-local">&nbsp;</div>
@@ -29,3 +29,4 @@
     -->
   </body>
 </html>
+
