--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-snowpack-app" />
-    <link rel="stylesheet" type="text/css" href="./index.css" />
     <title>Snowpack App</title>
   </head>
   <body>
@@ -28,7 +27,7 @@
           });
       }
     </script>
-    <script type="module" src="./dist/editorUI.js"></script>
+    <script type="module" src="./abtasty_sandboxed/editorUI.js"></script>
     <div id="editorchrome">
       <div id="pointer-local">&nbsp;</div>
       <div id="pointer-remote">&nbsp;</div>
