--- a/public/index.html
+++ b/public/index.html
@@ -1,39 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
+<!DOCTYPE html><html lang="en"><head>
+    <meta charset="utf-8">
+    <link rel="icon" href="/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Web site created using create-snowpack-app">
     <title>Snowpack App</title>
   </head>
   <body>
     <script>
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./sw.js', {scope: './'})
-          .then((reg) => {
-            // registration worked
-            console.log('Registration succeeded. Scope is ' + reg.scope);
-            if(reg.installing) {
-              console.log('Service worker installing');
-            } else if(reg.waiting) {
-              console.log('Service worker installed');
-            } else if(reg.active) {
-              console.log('Service worker active');
-            }
-          }).catch((error) => {
-            // registration failed
-            console.log('Registration failed with ' + error);
-          });
-      }
+      // if ('serviceWorker' in navigator) {
+      //   console.log('trying to register service worker');
+      //   navigator.serviceWorker.register('./sw.js', {scope: './'})
+      //     .then((reg) => {
+      //       // registration worked
+      //       console.log('Registration succeeded. Scope is ' + reg.scope);
+      //       if(reg.installing) {
+      //         console.log('Service worker installing');
+      //       } else if(reg.waiting) {
+      //         console.log('Service worker installed');
+      //       } else if(reg.active) {
+      //         console.log('Service worker active');
+      //       }
+      //     }).catch((error) => {
+      //       // registration failed
+      //       console.log('Registration failed with ' + error);
+      //     });
+      // } else {
+      //   console.log('cannot register service worker')
+      // }
     </script>
     <script type="module" src="./abtasty_sandboxed/editorUI.js"></script>
     <div id="editorchrome">
-      <div id="pointer-local">&nbsp;</div>
-      <div id="pointer-remote">&nbsp;</div>
-      <input tabindex=1 type="text" id="gotourl" placeholder="enter a valid url" class="invalid" /><button type="button" id="gotourlbutton" class="invalid">GO!</button>
-      <link rel="stylesheet" type="text/css" href="./index.css" />
+      <div id="pointer-local"> </div>
+      <div id="pointer-remote"> </div>
+      <div id="gotoform">
+        <input tabindex="1" type="text" id="gotourl" size="50" placeholder="enter a valid url" class="invalid"><button type="button" id="gotourlbutton" class="invalid">GO!</button>
+      </div>
+      <link rel="stylesheet" type="text/css" href="./index.css">
     </div>
-  </body>
-</html>
+  
 
+
+</body></html>
