--- a/public/index.html
+++ b/public/index.html
@@ -7,26 +7,23 @@
   </head>
   <body>
     <script>
-      // if ('serviceWorker' in navigator) {
-      //   console.log('trying to register service worker');
-      //   navigator.serviceWorker.register('./sw.js', {scope: './'})
-      //     .then((reg) => {
-      //       // registration worked
-      //       console.log('Registration succeeded. Scope is ' + reg.scope);
-      //       if(reg.installing) {
-      //         console.log('Service worker installing');
-      //       } else if(reg.waiting) {
-      //         console.log('Service worker installed');
-      //       } else if(reg.active) {
-      //         console.log('Service worker active');
-      //       }
-      //     }).catch((error) => {
-      //       // registration failed
-      //       console.log('Registration failed with ' + error);
-      //     });
-      // } else {
-      //   console.log('cannot register service worker')
-      // }
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('./sw.js', {scope: './'})
+          .then((reg) => {
+            // registration worked
+            console.log('Registration succeeded. Scope is ' + reg.scope);
+            if(reg.installing) {
+              console.log('Service worker installing');
+            } else if(reg.waiting) {
+              console.log('Service worker installed');
+            } else if(reg.active) {
+              console.log('Service worker active');
+            }
+          }).catch((error) => {
+            // registration failed
+            console.log('Registration failed with ' + error);
+          });
+      }
     </script>
     <script type="module" src="./abtasty_sandboxed/editorUI.js"></script>
     <div id="editorchrome">
